--- a/Group7_SE1733_A01_BE/Group7_SE1733_A01_BE/appsettings.json
+++ b/Group7_SE1733_A01_BE/Group7_SE1733_A01_BE/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=LAPTOP-AEVH89JM\\TUNGK;Initial Catalog=FUNewsManagement;Persist Security Info=True;User ID=sa;Password=1234567890;Encrypt=False"
+    //"DefaultConnection": "Data Source=LAPTOP-AEVH89JM\\TUNGK;Initial Catalog=FUNewsManagement;Persist Security Info=True;User ID=sa;Password=1234567890;Encrypt=False",
+    "DefaultConnection": "Data Source=LAPTOP-5TIM7V26\\THANGLAM2710;Initial Catalog=FUNewsManagement;Persist Security Info=True;User ID=sa;Password=1234567890;Encrypt=False"
   },
   "AdminAccount": {
     "Email": "admin@FUNewsManagementSystem.org",
