--- a/Group7_SE1733_A01_BE/Repositories/efpt.config.json
+++ b/Group7_SE1733_A01_BE/Repositories/efpt.config.json
@@ -11,11 +11,27 @@
    "ProjectRootNamespace": "Repositories",
    "Schemas": null,
    "SelectedHandlebarsLanguage": 2,
-   "SelectedToBeGenerated": 2,
+   "SelectedToBeGenerated": 0,
    "T4TemplatePath": null,
    "Tables": [
       {
+         "Name": "[dbo].[Category]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[NewsArticle]",
+         "ObjectType": 0
+      },
+      {
          "Name": "[dbo].[NewsTag]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[SystemAccount]",
+         "ObjectType": 0
+      },
+      {
+         "Name": "[dbo].[Tag]",
          "ObjectType": 0
       }
    ],
